--- a/src/components/StatsPage.css
+++ b/src/components/StatsPage.css
@@ -7,8 +7,7 @@
 
   position: relative;
   width: 100%;
-  height: 100%;
-  overflow-y: auto;
+  min-height: 100%;
   overflow-x: hidden;
   color: #fff;
   padding: 20px 16px 100px;
