--- a/src/components/StatsPage.css
+++ b/src/components/StatsPage.css
@@ -7,8 +7,10 @@
 
   position: relative;
   width: 100%;
-  min-height: 100%;
+  height: 100vh;
+  overflow-y: auto;
   overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
   color: #fff;
   padding: 20px 16px 100px;
   box-sizing: border-box;
